crates/rome_formatter/tests/specs/prettier/js/comments/jsdoc.js.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 144
expression: jsdoc.js

---
# Input
```js
/** @type {any} */
const x = (
    <div>
        <div />
    </div>
);

/**
 * @type {object}
 */
() => (
    <div>
        sajdfpoiasdjfpoiasdjfpoiasdjfpoiadsjfpaoisdjfapsdiofjapioisadfaskfaspiofjp
    </div>
);

/**
 * @type {object}
 */
function HelloWorld() {
    return (
        <div>
           <span>Test</span>
        </div>
    );
}
```

# Output
```js
/** @type {any} */
const x = (
    <div>
        <;
div />
    </div>
)

/**
 * @type {object}
 */
() => (
    <div>
sajdfpoiasdjfpoiasdjfpoiasdjfpoiadsjfpaoisdjfapsdiofjapioisadfaskfaspiofjp
    </div>
)

/**
 * @type {object}
 */
function HelloWorld() {
  return (
        <div>
           <;
  span>Test</span>
        </div>
  )
}

```

# Errors
```
error[SyntaxError]: expected `')'` but instead found `div`
  ┌─ jsdoc.js:4:10
  │
4 │         <div />
  │          ^^^ unexpected

error: unterminated regex literal
  ┌─ jsdoc.js:5:11
  │
5 │     </div>
  │      -    ^ ...but the line ends here
  │      │    
  │      a regex literal starts there...

error[SyntaxError]: expected an expression but instead found ')'
  ┌─ jsdoc.js:6:1
  │
6 │ );
  │ ^ Expected an expression here

error[SyntaxError]: expected `')'` but instead found `sajdfpoiasdjfpoiasdjfpoiasdjfpoiadsjfpaoisdjfapsdiofjapioisadfaskfaspiofjp`
   ┌─ jsdoc.js:13:9
   │
13 │         sajdfpoiasdjfpoiasdjfpoiasdjfpoiadsjfpaoisdjfapsdiofjapioisadfaskfaspiofjp
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unexpected

error[SyntaxError]: Expected an expression for the right hand side of a `<`, but found an operator instead
   ┌─ jsdoc.js:14:6
   │
14 │     </div>
   │     -^ But this operator was encountered instead
   │     │ 
   │     This operator requires a right hand side value

error[SyntaxError]: expected an expression but instead found ')'
   ┌─ jsdoc.js:15:1
   │
15 │ );
   │ ^ Expected an expression here

error[SyntaxError]: expected `')'` but instead found `span`
   ┌─ jsdoc.js:23:13
   │
23 │            <span>Test</span>
   │             ^^^^ unexpected

error: unterminated regex literal
   ┌─ jsdoc.js:24:15
   │
24 │         </div>
   │          -    ^ ...but the line ends here
   │          │    
   │          a regex literal starts there...

error[SyntaxError]: expected an expression but instead found ')'
   ┌─ jsdoc.js:25:5
   │
25 │     );
   │     ^ Expected an expression here


```


